name:                python-pickle
version:             0.2.2
Cabal-Version:       >= 1.8
synopsis:            Serialization/deserialization using Python Pickle format.
description:
  This package implements serialization and deserialization of Python objects
  using the Pickle format.
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.be
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/noteed/python-pickle

library
  build-depends:       attoparsec,
                       base,
                       bytestring,
                       cereal,
                       containers,
                       mtl

  exposed-modules:     Language.Python.Pickle
  ghc-options:         -Wall

executable pickle
  main-is:             pickle.hs
  hs-source-dirs:      bin/
  build-depends:       base,
                       bytestring,
                       cmdargs,
                       python-pickle
  ghc-options:         -Wall

test-suite pickled-values
  hs-source-dirs: tests
  main-is: PickledValues.hs
  type: exitcode-stdio-1.0

  build-depends:
    base,
    bytestring,
    containers,
    directory,
    HUnit,
    python-pickle,
    process,
    test-framework == 0.7.*,
    test-framework-hunit == 0.3.*

  ghc-options: -Wall
